--- a/src/Views/Widgets/PageTabBar.xaml
+++ b/src/Views/Widgets/PageTabBar.xaml
@@ -29,7 +29,7 @@
             Grid.Column="1"
             x:Name="leftScroller"
             Click="ScrollLeft"
-            Width="18" Padding="6"
+            Width="18"
             HoverBackground="{DynamicResource Brush.TabButtonHover}"
             BorderThickness="0"
             Icon="{StaticResource Icon.ScrollLeft}"
@@ -92,7 +92,7 @@
                                                     Click="CloseTab"
                                                     x:Name="closer"
                                                     Width="16" Height="16"
-                                                    Margin="0,1,8,0" Padding="4"
+                                                    Margin="0,1,8,0" IconSize="8"
                                                     ToolTip="{DynamicResource Text.Close}"
                                                     Icon="{StaticResource Icon.Close}"
                                                     HoverBackground="{DynamicResource Brush.TabButtonHover}"
@@ -151,7 +151,7 @@
             Grid.Column="3"  
             x:Name="rightScroller"
             Click="ScrollRight"
-            Width="18" Padding="6"
+            Width="18"
             HoverBackground="{DynamicResource Brush.TabButtonHover}"
             BorderThickness="0"
             Icon="{StaticResource Icon.ScrollRight}"
