--- a/src/Views/About.xaml
+++ b/src/Views/About.xaml
@@ -37,7 +37,7 @@
                 Grid.Column="3"
                 Click="Quit"
                 Width="28"
-                Padding="10" 
+                IconSize="10" 
                 Icon="{StaticResource Icon.Close}" 
                 HoverBackground="Red" 
                 WindowChrome.IsHitTestVisibleInChrome="True"/>
