--- a/src/Resources/Locales/zh_CN.xaml
+++ b/src/Resources/Locales/zh_CN.xaml
@@ -303,6 +303,7 @@
     <sys:String x:Key="Text.Welcome.Delete">删除</sys:String>
     <sys:String x:Key="Text.Welcome.Search">快速查找仓库</sys:String>
     <sys:String x:Key="Text.Welcome.Sort">排序</sys:String>
+    <sys:String x:Key="Text.Welcome.DragDropTip">支持拖放目录添加</sys:String>
 
     <sys:String x:Key="Text.Pull">拉回</sys:String>
     <sys:String x:Key="Text.Pull.Title">拉回（拉取并合并）</sys:String>
