--- a/src/Resources/Themes/Dark.xaml
+++ b/src/Resources/Themes/Dark.xaml
@@ -1,10 +1,13 @@
 <ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Color x:Key="Colors.Shadow">White</Color>
+    
     <SolidColorBrush x:Key="Brush.Logo" Color="#FFF05133"/>
 
     <SolidColorBrush x:Key="Brush.Window" Color="#FF252525"/>
     <SolidColorBrush x:Key="Brush.TitleBar" Color="#FF1F1F1F"/>
+    <SolidColorBrush x:Key="Brush.ToolBar" Color="#FF2C2C2C"/>
     <SolidColorBrush x:Key="Brush.TabButtonHover" Color="#FF404040"/>
     <SolidColorBrush x:Key="Brush.Popup" Color="#FF2B2B2B"/>
     <SolidColorBrush x:Key="Brush.Contents" Color="#FF181818"/>
