--- a/src/Resources/Themes/Light.xaml
+++ b/src/Resources/Themes/Light.xaml
@@ -1,10 +1,13 @@
 <ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Color x:Key="Colors.Shadow">Black</Color>
+
     <SolidColorBrush x:Key="Brush.Logo" Color="#FFF05133"/>
 
     <SolidColorBrush x:Key="Brush.Window" Color="#FFF0F5F9"/>
     <SolidColorBrush x:Key="Brush.TitleBar" Color="#FFCFDEEA"/>
+    <SolidColorBrush x:Key="Brush.ToolBar" Color="#FFF0F5F9"/>
     <SolidColorBrush x:Key="Brush.TabButtonHover" Color="#1D000000"/>
     <SolidColorBrush x:Key="Brush.Popup" Color="#FFF8F8F8"/>
     <SolidColorBrush x:Key="Brush.Contents" Color="#FFFAFAFA"/>
