--- a/src/Views/Widgets/Histories.xaml
+++ b/src/Views/Widgets/Histories.xaml
@@ -22,14 +22,33 @@
                 </Grid.RowDefinitions>
 
                 <!-- SearchBar -->
-                <Grid Grid.Row="0" x:Name="searchBar" Margin="0,-32,0,0">
+                <Grid Grid.Row="0" x:Name="searchBar" Height="32" Margin="0,-32,0,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="24"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Border 
+                        Grid.Column="0" Grid.ColumnSpan="3" 
+                        BorderThickness="0,0,0,1" 
+                        BorderBrush="{DynamicResource Brush.Border0}"
+                        Background="{DynamicResource Brush.Window}"/>
+                    
+                    <Path
+                        Grid.Column="0"
+                        Width="14" Height="14"
+                        Data="{StaticResource Icon.Search}"/>
+
                     <controls:TextEdit 
+                        Grid.Column="1"
                         x:Name="txtSearch"
-                        Margin="4" Padding="0,0,22,0"
                         Height="24"
+                        BorderThickness="0"
                         Placeholder="{DynamicResource Text.Histories.Search}"
                         PreviewKeyDown="OnSearchPreviewKeyDown"/>
-                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="8,0">
+                    
+                    <StackPanel Grid.Column="2" Orientation="Horizontal" VerticalAlignment="Center" Margin="8,0">
                         <controls:IconButton 
                             Click="ClearSearch"
                             Width="14" Height="14"
@@ -38,7 +57,7 @@
                             ToolTip="{DynamicResource Text.Histories.SearchClear}"/>
                         <controls:IconButton
                             Click="HideSearch"
-                            Width="14" Height="14" Margin="6,0,0,0"
+                            Width="14" Height="14" Margin="12,0,0,0"
                             Icon="{StaticResource Icon.Up}" 
                             Foreground="{DynamicResource Brush.FG2}"
                             ToolTip="{DynamicResource Text.Close}"/>
@@ -96,7 +115,7 @@
                                             </ItemsControl.ItemTemplate>
                                         </ItemsControl>
 
-                                        <TextBlock Text="{Binding Subject}" FontSize="13" Margin="2,0,0,0"/>
+                                        <TextBlock Text="{Binding Subject}" Margin="2,0,0,0"/>
                                     </StackPanel>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
