--- a/src/Views/Widgets/PageTabBar.xaml
+++ b/src/Views/Widgets/PageTabBar.xaml
@@ -8,7 +8,7 @@
              xmlns:converters="clr-namespace:SourceGit.Views.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="28" d:DesignWidth="800">
-    <Grid Margin="0,4,0,0">
+    <Grid Margin="0,6,0,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1"/>
             <ColumnDefinition Width="Auto"/>
@@ -20,7 +20,7 @@
         <Rectangle
             Grid.Column="0"
             x:Name="startSeperator"
-            Width="1" Height="16"
+            Width="1" Height="20"
             Fill="{DynamicResource Brush.FG2}"
             Opacity=".5"/>
 
@@ -74,8 +74,8 @@
                             <Setter Property="Template">
                                 <Setter.Value>
                                     <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                                        <Border x:Name="Border" Background="Transparent" BorderBrush="Transparent" BorderThickness="1,1,1,0" CornerRadius="4,4,0,0">
-                                            <Grid x:Name="Contents" Width="160" VerticalAlignment="Center" Opacity=".5" ToolTip="{Binding Tooltip}">
+                                        <Border x:Name="Border" Background="Transparent" BorderBrush="Transparent" BorderThickness="1,1,1,0" CornerRadius="6,6,0,0">
+                                            <Grid x:Name="Contents" Width="200" VerticalAlignment="Center" Opacity=".5" ToolTip="{Binding Tooltip}">
                                                 <Path 
                                                     Width="8" Margin="8,0,0,0"
                                                     HorizontalAlignment="Left"
@@ -102,7 +102,7 @@
                                                 <Rectangle
                                                     x:Name="seperator"
                                                     Margin="4,0,0,0"
-                                                    Width="1"
+                                                    Width="1" Height="20"
                                                     Fill="Transparent"
                                                     HorizontalAlignment="Right"/>
                                             </Grid>
@@ -111,20 +111,21 @@
                                         <ControlTemplate.Triggers>
                                             <Trigger Property="IsSelected" Value="True">
                                                 <Setter TargetName="Border" Property="BorderBrush" Value="{DynamicResource Brush.Border0}"/>
-                                                <Setter TargetName="Border" Property="Background" Value="{DynamicResource Brush.Window}"/>
+                                                <Setter TargetName="Border" Property="Background" Value="{DynamicResource Brush.ToolBar}"/>
                                                 <Setter TargetName="Contents" Property="Opacity" Value="1"/>
-                                                <Setter TargetName="closer" Property="Visibility" Value="Visible"/>
                                             </Trigger>
                                             <DataTrigger Binding="{Binding IsSeperatorVisible}" Value="True">
                                                 <Setter TargetName="seperator" Property="Fill" Value="{DynamicResource Brush.FG2}"/>
                                             </DataTrigger>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter TargetName="closer" Property="Visibility" Value="Visible"/>
+                                            </Trigger>
                                             <MultiTrigger>
                                                 <MultiTrigger.Conditions>
                                                     <Condition Property="IsSelected" Value="False"/>
                                                     <Condition Property="IsMouseOver" Value="True"/>
                                                 </MultiTrigger.Conditions>
                                                 <Setter TargetName="Contents" Property="Opacity" Value=".85"/>
-                                                <Setter TargetName="closer" Property="Visibility" Value="Visible"/>
                                             </MultiTrigger>
                                         </ControlTemplate.Triggers>
                                     </ControlTemplate>
@@ -135,7 +136,7 @@
                 </ListBox>
 
                 <Button
-                    Width="16" Height="16" Margin="8,0,0,0"
+                    Width="16" Height="16" Margin="8,2,0,0"
                     Background="Transparent"
                     BorderThickness="0"
                     ToolTip="{DynamicResource Text.PageTabBar.New}"
