--- a/src/Resources/Styles/TextBox.xaml
+++ b/src/Resources/Styles/TextBox.xaml
@@ -1,7 +1,7 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:controls="clr-namespace:SourceGit.Views.Controls">
-    <Style x:Key="Style.TextBox" TargetType="{x:Type TextBox}">
+    <Style TargetType="{x:Type controls:TextEdit}">
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="OverridesDefaultStyle" Value="True"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
@@ -58,30 +58,45 @@
         </Setter>
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type TextBox}">
+                <ControlTemplate TargetType="{x:Type controls:TextEdit}">
                     <Border 
                         x:Name="Border" 
                         Background="{TemplateBinding Background}"
                         SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
                         BorderThickness="{TemplateBinding BorderThickness}"
-                        BorderBrush="{TemplateBinding BorderBrush}">
-                        <ScrollViewer 
-                            x:Name="PART_ContentHost"
-                            Margin="{TemplateBinding Padding}"
-                            VerticalAlignment="Center"
-                            Background="Transparent"
-                            BorderThickness="0"
-                            IsTabStop="False"
-                            RenderOptions.ClearTypeHint="Enabled"
-                            CanContentScroll="True"
-                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        Padding="{TemplateBinding Padding}">
+                        <Grid>
+                            <TextBlock
+                                x:Name="PART_Placeholder"
+                                Margin="4,0"
+                                Text="{TemplateBinding Placeholder}"
+                                Foreground="{DynamicResource Brush.FG2}"
+                                Visibility="{TemplateBinding PlaceholderVisibility}"
+                                VerticalAlignment="Center"/>
+
+                            <ScrollViewer 
+                                x:Name="PART_ContentHost"
+                                VerticalAlignment="Center"
+                                Background="Transparent"
+                                BorderThickness="0"
+                                IsTabStop="False"
+                                RenderOptions.ClearTypeHint="Enabled"
+                                CanContentScroll="True"
+                                SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                        </Grid>
                     </Border>
-                        
+
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="true">
                             <Setter TargetName="Border" Property="BorderBrush" Value="{DynamicResource Brush.Accent1}"/>
                         </Trigger>
                         <Trigger Property="AcceptsReturn" Value="True">
+                            <Setter TargetName="PART_Placeholder" Property="VerticalAlignment" Value="Top"/>
+                            <Setter TargetName="PART_ContentHost" Property="VerticalAlignment" Value="Top"/>
+                        </Trigger>
+                        <Trigger Property="TextWrapping" Value="Wrap">
+                            <Setter TargetName="PART_Placeholder" Property="VerticalAlignment" Value="Top"/>
                             <Setter TargetName="PART_ContentHost" Property="VerticalAlignment" Value="Top"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
@@ -89,7 +104,4 @@
             </Setter.Value>
         </Setter>
     </Style>
-
-    <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource Style.TextBox}"/>
-    <Style TargetType="{x:Type controls:TextEdit}" BasedOn="{StaticResource Style.TextBox}"/>
 </ResourceDictionary>
