style<PageTabBar>: transparent background for scroller

--- a/src/Views/Widgets/PageTabBar.xaml
+++ b/src/Views/Widgets/PageTabBar.xaml
@@ -30,7 +30,7 @@
             x:Name="leftScroller"
             Click="ScrollLeft"
             Width="18"
-            HoverBackground="{DynamicResource Brush.TabButtonHover}"
+            HoverBackground="Transparent"
             BorderThickness="0"
             Icon="{StaticResource Icon.ScrollLeft}"
             WindowChrome.IsHitTestVisibleInChrome="True"
@@ -153,7 +153,7 @@
             x:Name="rightScroller"
             Click="ScrollRight"
             Width="18"
-            HoverBackground="{DynamicResource Brush.TabButtonHover}"
+            HoverBackground="Transparent"
             BorderThickness="0"
             Icon="{StaticResource Icon.ScrollRight}"
             WindowChrome.IsHitTestVisibleInChrome="True"
