--- a/src/Views/FileHistories.xaml
+++ b/src/Views/FileHistories.xaml
@@ -131,7 +131,24 @@
             <GridSplitter Grid.Column="1" Width="1" HorizontalAlignment="Center" VerticalAlignment="Stretch" Background="Transparent"/>
 
             <!-- Diff Viewer -->
-            <widgets:DiffViewer Grid.Column="2" x:Name="diffViewer" Padding="4"/>
+            <Grid Grid.Column="2" Margin="4,4,4,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="36"/>
+                </Grid.RowDefinitions>
+                
+                <widgets:DiffViewer Grid.Row="0" x:Name="diffViewer" />
+
+                <Button 
+                    Grid.Row="1"
+                    Height="30" 
+                    Padding="8,0"
+                    FontWeight="Bold"
+                    HorizontalAlignment="Center" VerticalAlignment="Center"
+                    Background="{DynamicResource Brush.Accent1}"
+                    Content="{DynamicResource Text.FileHistory.UseThisVersion}"
+                    Click="UseSelectedVersion"/>
+            </Grid>            
         </Grid>
     </Grid>
 </controls:Window>
