--- a/src/Views/Widgets/Stashes.xaml
+++ b/src/Views/Widgets/Stashes.xaml
@@ -26,25 +26,43 @@
             
             <!-- Stashes List Group -->
             <Border Grid.Row="0" BorderBrush="{DynamicResource Brush.Border0}" BorderThickness="0,0,0,1">
-                <StackPanel Orientation="Horizontal">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+
                     <Path
+                        Grid.Column="0"
                         Margin="4,0"
                         Width="12" Height="12"
                         Fill="{DynamicResource Brush.FG2}"
                         Data="{StaticResource Icon.Stashes}"/>
 
                     <TextBlock
+                        Grid.Column="1"
                         Margin="4,0,0,0"
                         Text="{DynamicResource Text.Stashes.Stashes}" 
                         Foreground="{DynamicResource Brush.FG2}" 
                         FontWeight="Bold"/>
 
                     <controls:Loading
+                        Grid.Column="2"
                         x:Name="waiting"
                         Width="12" Height="12"
                         Margin="8,0,0,0"
                         Visibility="Collapsed"/>
-                </StackPanel>
+
+                    <controls:IconButton
+                        Grid.Column="4"
+                        Click="ClearAll"
+                        Width="14" Height="14"
+                        Margin="8,0"
+                        Icon="{StaticResource Icon.Clear}"/>
+                </Grid>
             </Border>
             
             <!-- Stashes List -->
